frontend/src/index.css
html,
body {
  margin: 0;
}

/* Changing the default text highlight colour */
::-moz-selection {
  background: #f1267b;
}

::selection {
  background: #f1267b;
}

/* Changing scrollbar default style for Webkit Browsers */
::-webkit-scrollbar {
  width: 0.5rem;
}

/* Scrollbar track style */
::-webkit-scrollbar-track {
  background: transparent;
}

/* Scrollbar handle style */
::-webkit-scrollbar-thumb {
  background: #9c5aa6;
  border-radius: 0.5rem; /* rounding the scrollbar ends */
}

/* Scrollbar on hover colour */
::-webkit-scrollbar-thumb:hover {
  background: #ba88c2;
}

